--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -8,10 +8,11 @@
 <body>
 <h1>회원가입</h1>
 
-<form th:object="${member}" th:action="@{/member/signup}" method="post">
+<form th:object="${memberDTO}" th:action="@{/member/signup}" method="post">
     <div><!-- 아이디 중복 체크 기능 필요 -->
         <label for="userId">아이디</label>
         <input type="text" id="userId" name="userId" th:field="*{userId}"/>
+        <p th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}"></p>
     </div>
     <input type="button" class="check_userId_btn" id="check_userId_btn" value="아이디 중복 체크"/>
 
@@ -19,11 +20,13 @@
     <div>
         <label for="passwd">비밀번호</label>
         <input type="password" id="passwd" name="passwd" th:field="*{passwd}"/>
+        <p th:if="${#fields.hasErrors('passwd')}" th:errors="*{passwd}"></p>
     </div>
 
     <div>
         <label for="school">학교</label>
         <input type="text" id="school" name="school" th:field="*{school}"/>
+        <p th:if="${#fields.hasErrors('school')}" th:errors="*{school}"></p>
     </div>
 
     <div>
@@ -38,38 +41,144 @@
     -->
 
     <div>
-        <label for="personalInf.name">이름</label>
-        <input type="text" id="personalInf.name" name="personalInf.name" th:field="*{personalInf.name}"/>
+        <label for="personalInfDTO.name">이름</label>
+        <input type="text" id="personalInfDTO.name" name="personalInfDTO.name" th:field="*{personalInfDTO.name}"/>
+        <p th:if="${#fields.hasErrors('personalInfDTO.name')}" th:errors="*{personalInfDTO.name}"></p>
     </div>
 
     <div>
-        <label for="personalInf.birth">생년월일</label>
-        <input type="text" id="personalInf.birth" name="personalInf.birth" th:field="*{personalInf.birth}"/>
+        <label for="personalInfDTO.birth">생년월일</label>
+        <input type="text" id="personalInfDTO.birth" name="personalInfDTO.birth" th:field="*{personalInfDTO.birth}"/>
+        <p th:if="${#fields.hasErrors('personalInfDTO.birth')}" th:errors="*{personalInfDTO.birth}"></p>
     </div>
 
     <div>
-        <label for="personalInf.phone">전화번호</label>
-        <input type="text" id="personalInf.phone" name="personalInf.phone" th:field="*{personalInf.phone}"/>
+        <label for="personalInfDTO.phone">전화번호</label>
+        <input type="text" id="personalInfDTO.phone" name="personalInfDTO.phone" th:field="*{personalInfDTO.phone}"/>
+        <p th:if="${#fields.hasErrors('personalInfDTO.phone')}" th:errors="*{personalInfDTO.phone}"></p>
     </div>
 
     <div>
-        <label for="address.zipcode">우편번호</label>
-        <input type="text" id="address.zipcode" name="address.zipcode" th:field="*{address.zipcode}"/>
+        <label for="addressDTO.zipcode">우편번호</label>
+        <input type="text" id="addressDTO.zipcode" name="addressDTO.zipcode" th:field="*{addressDTO.zipcode}"/>
+        <input type="button" onclick="execDaumPostcode()" value="우편번호찾기">
+        <p th:if="${#fields.hasErrors('addressDTO.zipcode')}" th:errors="*{addressDTO.zipcode}"></p>
     </div>
 
     <div>
-        <label for="address.address1">주소</label>
-        <input type="text" id="address.address1" name="address.address1" th:field="*{address.address1}"/>
+        <label for="addressDTO.address1">주소</label>
+        <input type="text" id="addressDTO.address1" name="addressDTO.address1" th:field="*{addressDTO.address1}"/>
+        <p th:if="${#fields.hasErrors('addressDTO.address1')}" th:errors="*{addressDTO.address1}"></p>
     </div>
 
     <div>
-        <label for="address.address2">상세 주소</label>
-        <input type="text" id="address.address2" name="address.address2" th:field="*{address.address2}" />
+        <label for="addressDTO.address2">상세 주소</label>
+        <input type="text" id="addressDTO.address2" name="addressDTO.address2" th:field="*{addressDTO.address2}" />
+        <p th:if="${#fields.hasErrors('addressDTO.address2')}" th:errors="*{addressDTO.address2}"></p>
     </div>
     <div>
         <button type="submit">가입하기</button>
     </div>
 </form>
+
+<!-- 우편번호 검색 시작 -->
+<!-- iOS에서는 position:fixed 버그가 있음, 적용하는 사이트에 맞게 position:absolute 등을 이용하여 top,left값 조정 필요 -->
+<div id="layer" style="display:none;position:fixed;overflow:hidden;z-index:1;-webkit-overflow-scrolling:touch;">
+    <img src="//t1.daumcdn.net/postcode/resource/images/close.png" id="btnCloseLayer" style="cursor:pointer;position:absolute;right:-3px;top:-3px;z-index:1" onclick="closeDaumPostcode()" alt="닫기 버튼">
+</div>
+
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script>
+    // 우편번호 찾기 화면을 넣을 element
+    var element_layer = document.getElementById('layer');
+
+    function closeDaumPostcode() {
+        // iframe을 넣은 element를 안보이게 한다.
+        element_layer.style.display = 'none';
+    }
+
+    function execDaumPostcode() {
+        new daum.Postcode({
+            oncomplete: function(data) {
+                // 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                var addr = ''; // 주소 변수
+                var extraAddr = ''; // 참고항목 변수
+
+                //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                    addr = data.roadAddress;
+                } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                    addr = data.jibunAddress;
+                }
+
+                // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
+                if(data.userSelectedType === 'R'){
+                    // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                    // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                    if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+                        extraAddr += data.bname;
+                    }
+                    // 건물명이 있고, 공동주택일 경우 추가한다.
+                    if(data.buildingName !== '' && data.apartment === 'Y'){
+                        extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                    }
+                    // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+                    if(extraAddr !== ''){
+                        extraAddr = ' (' + extraAddr + ')';
+                    }
+                    //(주의)address1에 참고항목이 보여지도록 수정
+                    // 조합된 참고항목을 해당 필드에 넣는다.
+                    //(수정) document.getElementById("address2").value = extraAddr;
+
+                }
+                //(수정) else {
+                //(수정)    document.getElementById("address2").value = '';
+                //(수정) }
+
+                // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                document.getElementById('addressDTO.zipcode').value = data.zonecode;
+                //(수정) + extraAddr를 추가해서 address1에 참고항목이 보여지도록 수정
+                document.getElementById("addressDTO.address1").value = addr + extraAddr;
+                // 커서를 상세주소 필드로 이동한다.
+                document.getElementById("addressDTO.address2").focus();
+
+                // iframe을 넣은 element를 안보이게 한다.
+                // (autoClose:false 기능을 이용한다면, 아래 코드를 제거해야 화면에서 사라지지 않는다.)
+                element_layer.style.display = 'none';
+            },
+            width : '100%',
+            height : '100%',
+            maxSuggestItems : 5
+        }).embed(element_layer);
+
+        // iframe을 넣은 element를 보이게 한다.
+        element_layer.style.display = 'block';
+
+        // iframe을 넣은 element의 위치를 화면의 가운데로 이동시킨다.
+        initLayerPosition();
+    }
+
+    // 브라우저의 크기 변경에 따라 레이어를 가운데로 이동시키고자 하실때에는
+    // resize이벤트나, orientationchange이벤트를 이용하여 값이 변경될때마다 아래 함수를 실행 시켜 주시거나,
+    // 직접 element_layer의 top,left값을 수정해 주시면 됩니다.
+    function initLayerPosition(){
+        var width = 300; //우편번호서비스가 들어갈 element의 width
+        var height = 400; //우편번호서비스가 들어갈 element의 height
+        var borderWidth = 5; //샘플에서 사용하는 border의 두께
+
+        // 위에서 선언한 값들을 실제 element에 넣는다.
+        element_layer.style.width = width + 'px';
+        element_layer.style.height = height + 'px';
+        element_layer.style.border = borderWidth + 'px solid';
+        // 실행되는 순간의 화면 너비와 높이 값을 가져와서 중앙에 뜰 수 있도록 위치를 계산한다.
+        element_layer.style.left = (((window.innerWidth || document.documentElement.clientWidth) - width)/2 - borderWidth) + 'px';
+        element_layer.style.top = (((window.innerHeight || document.documentElement.clientHeight) - height)/2 - borderWidth) + 'px';
+    }
+</script>
+<!-- 우편번호 검색 끝 -->
 
 <script>
     $(document).ready(function() {
@@ -82,7 +191,6 @@
                 alert('아이디를 입력해주세요.');
             }
             else {
-
                 $.ajax({
                     url: '/member/' + userId + '/exists',
                     type: 'GET',
@@ -90,8 +198,8 @@
                         if (data === true) {
                             alert('이미 존재하는 아이디입니다.');
                         } else {
-                            alert('사용가능한 아이디입니다.');
                             isDuplicated = true;
+                            alert('사용가능한 아이디입니다.');
                         }
                     },
                     error: function () {
@@ -101,7 +209,7 @@
             }
         });
         $('form').submit(function (event) {
-            if (isDuplicated) {
+            if (isDuplicated == false) {
                 event.preventDefault();
                 alert('아이디 중복 체크를 필수!');
             }
@@ -109,5 +217,6 @@
     });
 
 </script>
+
 </body>
 </html>
