--- a/src/main/resources/templates/meeting/createMeeting.html
+++ b/src/main/resources/templates/meeting/createMeeting.html
@@ -13,6 +13,11 @@
         <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></p>
     </div>
     <div>
+        <label for="introduction">미팅 파티 이름</label>
+        <input type="text" id="introduction" name="introduction" th:field="*{introduction}" required>
+        <p th:if="${#fields.hasErrors('introduction')}" th:errors="*{introduction}"></p>
+    </div>
+    <div>
         <label for="school">학교</label>
         <input type="text" id="school" name="school" th:field="*{school}" required>
         <p th:if="${#fields.hasErrors('school')}" th:errors="*{school}"></p>
