--- a/src/main/resources/templates/meeting/detail.html
+++ b/src/main/resources/templates/meeting/detail.html
@@ -53,6 +53,7 @@
     <form th:action="@{/meeting/delete}" th:object="${meeting}" method="post" style="display: inline">
       <input type="hidden" th:name="id" th:value="${meeting.id}">
       <button type="button" id="deleteBtn">삭제</button>
+      <a th:href="@{/meetingPro/detail(id=${meeting.id})}">성공화면</a>
     </form>
   </div>
 
@@ -69,7 +70,7 @@
             <p>가입 대기</p>
           </div>
           <div th:if="${proposer.status} == 1">
-            <a th:href="@{/meeting/room}">가입완료</a>
+            <a th:href="@{/meetingPro/proposer}">성공화면</a>
           </div>
       </div>
     </div>
