--- a/src/main/resources/templates/meeting/proposer.html
+++ b/src/main/resources/templates/meeting/proposer.html
@@ -10,24 +10,33 @@
 <table>
     <thead>
     <tr>
-        <th>미팅명</th>
         <th>학교</th>
+        <th>소개글</th>
         <th>지역</th>
         <th>인원 수</th>
         <th>미팅장</th>
         <th>생성일</th>
+        <th>상태</th>
+        <th>승인/거절</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each="list : ${lists}">
         <td th:text="${list.school}"/>
-        <td th:text="${list.region}"/>)
+        <td th:text="${list.introduction}"/>
+        <td th:text="${list.region}"/>
         <td th:text="${list.count}"/>
         <td th:text="${list.member.userId}"/>
-        <td th:text="${#dates.format(list.date, 'yyyy년 MM월 DD일')}"/>
-        <td th:text="${list.status == 0} ? '대기 중' : '매칭 완료'"></td>
-        <td>
-        <form th:action="@{/meetingPro/delete}" th:object="${list}" method="post" style="display:inline;">
+        <td th:text="${#dates.format(list.date, 'yyyy년 MM월 dd일')}"/>
+        <td th:utext="${list.status}"></td>
+        <td th:if="${list.status == 1}">승인완료</td>
+        <td th:if="${list.status == 0}">
+        <form th:action="@{/meetingPro/select}" th:object="${list}" method="post" style="display:inline;" id="selectForm">
+            <input type="hidden" th:name="id" th:value="${list.id}" />
+            <input type="hidden" th:name="meetId" th:value="${meeting.id}">
+            <button type="button" id="selectBtn">수락</button>
+        </form>
+            <form th:action="@{/meetingPro/delete}" th:object="${list}" method="post" style="display:inline;" id="deleteForm">
             <input type="hidden" th:name="id" th:value="${list.id}" />
             <button type="button" id="deleteBtn">거절</button>
         </form>
@@ -37,17 +46,19 @@
     </tbody>
 </table>
 <a th:href="@{/}">홈으로</a>
-
 <script>
     $(document).ready(function () {
         $('#deleteBtn').click(function() {
             if (confirm("삭제하시겠습니까?")){
-                $('form').submit();
+                $('#deleteForm').submit();
+            }
+        });
+        $('#selectBtn').click(function() {
+            if (confirm("승인하시겠습니까?")){
+                $('#selectForm').submit();
             }
         });
     });
 </script>
-
-
 </body>
 </html>
