--- a/src/main/resources/templates/meeting/completeList.html
+++ b/src/main/resources/templates/meeting/completeList.html
@@ -2,11 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org"  xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>진행중인 미팅 리스트</title>
+    <title>미팅 리스트</title>
 </head>
 <body>
-<h1>미팅 목록</h1>
-<a th:href="@{/meeting/completeList}">성사된 미팅</a>
+<h1>성사된 미팅 목록</h1>
+<a th:href="@{/meeting/list}">진행중인 미팅</a>
 <table>
     <thead>
         <tr>
@@ -20,7 +20,7 @@
     </thead>
     <tbody>
         <tr th:each="meeting : ${meetings}">
-            <div th:if="${meeting.status == 0}">
+            <div th:if="${meeting.status == 1}">
                 <td>
                     <a th:href="@{/meeting/detail(id=${meeting.id})}" th:text="${meeting.getTitle()}"></a>
                 </td>
