--- a/src/main/resources/templates/admin/adminPage.html
+++ b/src/main/resources/templates/admin/adminPage.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>관리자 페이지</title>
 </head>
 <body>
-이곳은 관리자가 관리하는 페이지입니다.
+<a th:href="@{/admin/member}">회원 관리</a>
+
 </body>
 </html>
