--- a/src/main/resources/templates/admin/adminPage.html
+++ b/src/main/resources/templates/admin/adminPage.html
@@ -7,6 +7,7 @@
 <body>
 <a th:href="@{/admin/member}">회원 관리</a>
 <a th:href="@{/admin/meeting}">미팅 관리</a>
+<a th:href="@{/admin/study}">스터디 관리</a>
 
 </body>
 </html>
