--- a/src/main/resources/templates/admin/manageMeeting.html
+++ b/src/main/resources/templates/admin/manageMeeting.html
@@ -37,7 +37,7 @@
         <td>
             <form th:action="@{/admin/deleteMeeting}" method="post" style="display: inline;" id="deleteForm">
                 <input type="hidden" th:name="id" th:value="${meeting.id}">
-                <button type="button" id="changeBtn">삭제</button>
+                <button type="button" id="deleteBtn">삭제</button>
             </form>
         </td>
 
@@ -48,7 +48,7 @@
 </table>
 <script>
     $(document).ready(function () {
-        $('#changeBtn').click(function() {
+        $('#deleteBtn').click(function() {
             if (confirm("삭제하시겠습니까?")){
                 $('#deleteForm').submit();
             }
