--- a/src/main/resources/templates/study/studyList.html
+++ b/src/main/resources/templates/study/studyList.html
@@ -5,7 +5,7 @@
     <title>스터디 리스트</title>
 </head>
 <body>
-<h1>미팅 목록</h1>
+<h1>스터디 목록</h1>
 <a th:href="@{/study/completeList}">성사된 미팅</a>
 <table>
     <thead>
