--- a/src/main/resources/templates/meeting/proposer.html
+++ b/src/main/resources/templates/meeting/proposer.html
@@ -51,7 +51,7 @@
 <script>
     $(document).ready(function () {
         $('#deleteBtn').click(function() {
-            if (confirm("삭제하시겠습니까?")){
+            if (confirm("거절 하시겠습니까?")){
                 $('#deleteForm').submit();
             }
         });
