--- a/src/main/resources/templates/board/createBoard.html
+++ b/src/main/resources/templates/board/createBoard.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>게시글 작성 폼</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <h1>게시글 작성</h1>
@@ -18,11 +19,28 @@
         <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}"></p>
     </div>
     <div>
+        <label for="image">이미지</label>
+        <input type="file" id="image" name="image" accept="image/*"/>
+    </div>
+
+    <div>
         <button type="submit">작성 하기</button>
     </div>
 
 
 </form>
+
+<script>
+    $(document).ready(function() {
+        $('#image').on('change', function() {
+            let size = this.files[0].size;
+            if (size > 5000000) { // 5MB
+                alert("5MB 이하의 사진만 가능합니다.");
+                $(this).val("");
+            }
+        });
+    });
+</script>
 
 </body>
 </html>
