--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -23,7 +23,6 @@
     <tr>
         <th>프로필</th>
         <td><img th:src="${board.member.profile}" alt="프로필 이미지"></td>
-    </tr>
     <tr>
         <th>작성시간</th>
         <td th:text="${#dates.format(board.date, 'yy년 MM월 dd일 HH시 mm분')}"></td>
@@ -36,12 +35,17 @@
         <th>조회수</th>
         <td>조회수 추가 필요</td>
     </tr>
+    </tr>
+    <tr>
+        <th>게시글 사진</th>
+        <td><img th:src="${board.picture}" alt="게시글 사진"></td>
+    </tr>
     <tr>
         <th>내용</th>
         <td th:text="${board.content}"></td>
     </tr>
 </table>
-<a th:href="@{/board/}">목록으로</a>
+<a th:href="@{/board/list}">목록으로</a>
 <!-- 로그인한 사용자와 작성자를 비교-->
 <div th:if="${board.member.userId} eq ${#authentication.name}">
     <a th:href="@{/board/update(id=${board.id})}">수정</a>
