--- a/src/main/resources/templates/member/myPage.html
+++ b/src/main/resources/templates/member/myPage.html
@@ -54,5 +54,8 @@
         <td th:text="${user.addressDTO.address2}"></td>
     </tr>
 </table>
+<a th:href="@{/member/modify}">회원 정보 수정</a>
+<a th:href="@{/member/modifyPasswd}">비밀번호 수정</a>
+<a th:href="@{/}">홈</a>
 </body>
 </html>
