--- a/src/main/resources/templates/meeting/createMeeting.html
+++ b/src/main/resources/templates/meeting/createMeeting.html
@@ -59,7 +59,7 @@
 </script>
 <script>
     $(document).ready(function() {
-        $('#image').on('change', function() {
+        $('#profileImg').on('change', function() {
             let size = this.files[0].size;
             if (size > 5000000) { // 5MB
                 alert("5MB 이하의 사진만 가능합니다.");
