--- a/src/main/resources/templates/meeting/createMeeting.html
+++ b/src/main/resources/templates/meeting/createMeeting.html
@@ -45,6 +45,7 @@
 
     <div>
         <button type="submit">가입하기</button>
+        <a th:href="@{/}">홈으로</a>
     </div>
 </form>
 <script type="text/javascript">
@@ -64,6 +65,12 @@
             if (size > 5000000) { // 5MB
                 alert("5MB 이하의 사진만 가능합니다.");
                 $(this).val("");
+            } else {
+                let reader = new FileReader();
+                reader.onload = function(e) {
+                    $('#current-img').attr('src', e.target.result);
+                }
+                reader.readAsDataURL(this.files[0]);
             }
         });
     });
