--- a/src/main/resources/templates/study/studyCreate.html
+++ b/src/main/resources/templates/study/studyCreate.html
@@ -37,11 +37,29 @@
     </div>
     <div>
         <button type="submit">작성 하기</button>
+        <a th:href="@{/}">홈으로</a>
     </div>
 
 
 </form>
-
+<script>
+    $(document).ready(function() {
+        $('#profileImg').on('change', function() {
+            let size = this.files[0].size;
+            if (size > 5000000) { // 5MB
+                alert("5MB 이하의 사진만 가능합니다.");
+                $(this).val("");
+            } else {
+                let reader = new FileReader();
+                reader.onload = function(e) {
+                    $('#current-img').attr('src', e.target.result);
+                }
+                reader.readAsDataURL(this.files[0]);
+            }
+        });
+        });
+    });
+</script>
 
 </body>
 </html>
