--- a/src/main/resources/templates/study/studyUpdate.html
+++ b/src/main/resources/templates/study/studyUpdate.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>스터디 생성</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-<form th:object="${studyDTO}" th:action="@{/study/update}" method="post">
+<form th:object="${studyDTO}" th:action="@{/study/update}" method="post" enctype="multipart/form-data">
     <div>
         <input type="hidden"  id="id" name="id" th:field="*{id}">
     </div>
@@ -24,7 +25,11 @@
         <input type="text" id="region" name="region" th:field="*{region}" required>
         <p th:if="${#fields.hasErrors('region')}" th:errors="*{region}"></p>
     </div>
-
+    <div>
+        <label for="profileImg">이미지</label>
+        <img id="current-img" src="#" alt="현재 이미지" th:src="@{''}">
+        <input type="file" id="profileImg" name="profileImg" accept="image/*"/>
+    </div>
     <div>
         <label for="regType">가입방식</label>
         <select id="regType" name="regType" th:field="*{regType}" required>
@@ -35,11 +40,41 @@
     </div>
     <div>
         <button type="submit">작성 하기</button>
+        <a th:href="@{/}">홈으로</a>
     </div>
 
 
 </form>
-
+<script type="text/javascript">
+    $(document).ready(function() {
+        let id = $('#id').val();
+        $('#profileImg').on('change', function() {
+            let size = this.files[0].size;
+            if (size > 5000000) { // 5MB
+                alert("5MB 이하의 사진만 가능합니다.");
+                $(this).val("");
+            } else {
+                let reader = new FileReader();
+                reader.onload = function(e) {
+                    $('#current-img').attr('src', e.target.result);
+                }
+                reader.readAsDataURL(this.files[0]);
+            }
+        });
+        });
+        $.ajax({
+            url: '/study/currentImage',
+            data: {id : id},
+            type: 'GET',
+            success: function (data) {
+                $('#current-img').attr('src',data.imageUrl)
+            },
+            error: function () {
+                alert('오류 발생');
+            }
+        });
+    });
+</script>
 
 </body>
 </html>
