--- a/src/main/resources/templates/member/myPage.html
+++ b/src/main/resources/templates/member/myPage.html
@@ -56,6 +56,8 @@
 </table>
 <a th:href="@{/member/myPage/modify}">회원 정보 수정</a>
 <a th:href="@{/member/myPage/board}">내가 작성한 게시글</a>
+<a th:href="@{/member/myPage/study}">내가 작성한 스터디</a>
+<a th:href="@{/member/myPage/meeting}">내가 작성한 미팅</a>
 <a th:href="@{/member/modifyPasswd}">비밀번호 수정</a>
 <a th:href="@{/}">홈</a>
 </body>
