--- a/src/main/resources/templates/study/studyCreate.html
+++ b/src/main/resources/templates/study/studyCreate.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>스터디 생성</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <form th:object="${studyDTO}" th:action="@{/study/create}" method="post"  enctype="multipart/form-data">
@@ -11,6 +12,7 @@
         <input type="text" id="name" name="name" th:field="*{name}" required>
         <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
     </div>
+    <input type="button" class="check_studyName_btn" id="check_studyName_btn" value="아이디 중복 체크"/>
     <div>
         <label for="content">내용</label>
         <textarea id="content" name="content" th:field="*{content}" required></textarea>
@@ -44,6 +46,39 @@
 </form>
 <script>
     $(document).ready(function() {
+        let isDuplicated = false;
+
+        $('#check_studyName_btn').click(function(event) {
+            event.preventDefault(); // 기본 동작 막기
+            let name = $('#name').val();
+            if (name == '') {
+                alert('스터디 명을 입력해주세요.');
+            }
+            else {
+                $.ajax({
+                    url: '/study/' + name + '/exists',
+                    type: 'GET',
+                    success: function (data) {
+                        if (data === true) {
+                            alert('이미 존재하는 이름입니다.');
+                        } else {
+                            isDuplicated = true;
+                            alert('사용가능한 이름입니다.');
+                        }
+                    },
+                    error: function () {
+                        alert('오류 발생');
+                    }
+                });
+            }
+        });
+        $('form').submit(function (event) {
+            if (isDuplicated == false) {
+                event.preventDefault();
+                alert('이름 중복 체크를 필수!');
+            }
+            let size = $('#profileImg')[0].files[0].size;
+        });
         $('#profileImg').on('change', function() {
             let size = this.files[0].size;
             if (size > 5000000) { // 5MB
@@ -56,7 +91,6 @@
                 }
                 reader.readAsDataURL(this.files[0]);
             }
-        });
         });
     });
 </script>
