--- a/src/main/resources/templates/board/createBoard.html
+++ b/src/main/resources/templates/board/createBoard.html
@@ -33,12 +33,17 @@
 
 <script type="text/javascript">
     $(document).ready(function() {
-        let id = $('#id').val();
         $('#image').on('change', function() {
             let size = this.files[0].size;
             if (size > 5000000) { // 5MB
                 alert("5MB 이하의 사진만 가능합니다.");
                 $(this).val("");
+            } else {
+                let reader = new FileReader();
+                reader.onload = function(e) {
+                    $('#current-img').attr('src', e.target.result);
+                }
+                reader.readAsDataURL(this.files[0]);
             }
         });
     });
