--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -45,6 +45,16 @@
         <td th:text="${board.content}"></td>
     </tr>
 </table>
+<a th:href="@{/board/list}">목록으로</a>
+<!-- 로그인한 사용자와 작성자를 비교-->
+<div th:if="${board.member.userId} eq ${#authentication.name}">
+    <a th:href="@{/board/update(id=${board.id})}">수정</a>
+    <form th:action="@{/board/delete}" th:object="${board}" method="post" style="display:inline;">
+        <input type="hidden" th:name="id" th:value="${board.id}" />
+        <button type="button" id="deleteBtn">삭제</button>
+    </form>
+</div>
+
 <h1>댓글</h1>
 <br><br>
 <div>
@@ -68,22 +78,24 @@
                 <td th:text="${#dates.format(reply.modify_date, 'yyyy-mm-dd')}"/>
             </div>
             <td><img th:src="${reply.picture}" alt="댓글 이미지"></td>
+            <div th:if="${#authentication.name.equals(reply.member.userId)}">
+                <td>
+                <form th:action="@{/board/deleteReply}" th:object="${reply}" method="post" style="display: inline">
+                    <input type="hidden" th:name="replyId" th:value="${reply.id}">
+                    <input type="hidden" th:name="boardId" th:value="${board.id}">
+                    <button type="button" id="deleteReplyBtn">삭제</button>
+                </form>
+                </td>
+            </div>
+
         </tr>
         </tbody>
     </table>
+
 </div>
 <h1>댓글 작성</h1>
 <div th:replace="board/createReply :: body(boardId=${board.id})">
     <!-- 게시글 덧글작성이 여기에 추가됌-->
-</div>
-<a th:href="@{/board/list}">목록으로</a>
-<!-- 로그인한 사용자와 작성자를 비교-->
-<div th:if="${board.member.userId} eq ${#authentication.name}">
-    <a th:href="@{/board/update(id=${board.id})}">수정</a>
-    <form th:action="@{/board/delete}" th:object="${board}" method="post" style="display:inline;">
-        <input type="hidden" th:name="id" th:value="${board.id}" />
-        <button type="button" id="deleteBtn">삭제</button>
-    </form>
 </div>
 
 <script>
@@ -91,6 +103,11 @@
         $('#deleteBtn').click(function() {
             if (confirm("삭제하시겠습니까?")){
                 $('form').submit();
+            }
+        });
+        $('#deleteReplyBtn').click(function() {
+            if (confirm("삭제하시겠습니까?")){
+                $(this).closest('form').submit();
             }
         });
     });
